@@ -5,6 +5,7 @@ Revision history for Perl module Git::PurePerl:
      - add a raw method to objects
      - add new set of classes to add objects
      - add class to talk the git protocol
+     - add a method to checkout the head
 
 0.38 Thu Dec 18 10:26:49 GMT 2008
      - add init() method to create a new repository
